fix nav-bar z-index

--- a/style/layout/_nav.scss
+++ b/style/layout/_nav.scss
@@ -2,6 +2,7 @@
     position:sticky;
     top: 0;
     left: 0;
+    z-index: 1;
 }
 
 .nav-bar{
