--- a/style/style.css
+++ b/style/style.css
@@ -100,6 +100,7 @@
   position: sticky;
   top: 0;
   left: 0;
+  z-index: 1;
 }
 
 .nav-bar {
